FlightPath 6.x Changelog
========================

2023-03-28
  Changed fp_url_get_contents() to make use of the superior fp_http_request() function.
  
  Fixed a bug where sometimes transfer credits do not show subject and course num if they were
  created from a split sub.
  

2023-03-23
  Added CSV to acceptable file formats (by default) when uploading student files.


2023-03-15
  Added new function to misc.inc to easily get all terms in a range.
  
  Added new system setting for public file extensions we will accept.


2023-02-22
  Minor warning fix in audit module.
  

2023-02-17
  Slight change to wording on Admin Console.
    

2023-02-16
  Fixed by in system.module, where when we load courses and save to our course cache file, we were not excluding the excluded courses.
  This was causing a bug in certain situations.
  
  Added code to FlightPath object's function to load entire course catalog-- it was included *excluded* courses by default, which was throwing
  off the subject select menu in the Courses Added by Advisor group.
  
  Modified system.install to include more indexes on courses and draft_courses table.
  

2023-02-09
  Modified Audit module to have new hooks which allow the module developer to add to the audit screen custom calculations and approvals.


2023-01-31
  Changed it so the "public files" screen only shows one icon for a link to a file.
  

2023-01-18
  Made a change to engagements module, when checking for all SMS messages.  Instead of checking for NOW - 1 DAY, it only checks
  for NOW - 3 HOURS.  For most of the time, this means it will only check for *today's* messages, except around midnight, where it will
  get the previous day's as well.  The aim is to retrieve less data, to lighten the amount of processing being done.
  
  Also made it so that we will not run the check for SMS messages (which simply refreshes delivery status, price, etc) more than